--- a/.github/workflows/update-test.yml
+++ b/.github/workflows/update-test.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Test Deployment
+name: Deployment
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -9,11 +9,63 @@ on:
 
 jobs:
   main:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - name: generate build path
-      run: echo "::set-output name=build::${{github.event.number}}/$(date +'%Y-%m-%dT%H:%M:%S')/"
+      run: echo "::set-output name=build::${{github.event.number}}/$(date +'%Y-%m-%dT%H:%M:%S')/" | sed 's_build::/*_build::/_'
       id: build-path
 
     - name: print build path
       run: echo "Build path is ${{ steps.build-path.outputs.build }}"
+
+    - uses: actions/checkout@v2
+
+    - name: use node.js 14.x
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14.x
+
+    - run: npm ci
+
+    - run: npm run build
+      env:
+        PUBLIC_URL: ${{ steps.build-path.outputs.build }}
+
+    - name: prepare git
+      run: |
+        git config --global user.name "Editor Deployment Bot"
+        git config --global user.email "opencast-support@elan-ev.de"
+
+    - name: prepare github ssh key
+      env:
+        DEPLOY_KEY: ${{ secrets.DEPLOY_KEY_TEST }}
+      run: |
+        install -dm 700 ~/.ssh/
+        echo "${DEPLOY_KEY}" > ~/.ssh/id_ed25519
+        chmod 600 ~/.ssh/id_ed25519
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+    - name: clone repository
+      run: |
+        git clone "git@github.com:elan-ev/opencast-editor-test.git" ~/editor-test
+        cd ~/editor-test
+        git checkout gh-pages
+
+    - name: commit new version
+      env:
+        DEPLOY_PATH: ~/editor-test${{ steps.build-path.outputs.build }}
+      run: |
+        # store build
+        cp -r build ~/editor-test
+        # Update gh-pages
+        cd ~/editor-test
+        mkdir -p "${DEPLOY_PATH}"
+        cp -r ~/editor-build/* "${DEPLOY_PATH}"
+        # commit new build
+        git add "${DEPLOY_PATH}"
+        git commit -m "Build ${{ steps.build-path.outputs.build }}"
+
+    - name: push updates
+      run: |
+        cd ~/editor-test
+        echo git push origin gh-pages
