--- a/.github/workflows/update-test.yml
+++ b/.github/workflows/update-test.yml
@@ -70,12 +70,10 @@ jobs:
     - name: commit new version
       run: |
         cd ~/editor-test
-        ls -1
         git add .
-        git status
         git commit -m "Build ${{ steps.build-path.outputs.build }}"
 
     - name: push updates
       run: |
         cd ~/editor-test
-        echo git push origin gh-pages
+        git push origin gh-pages
