--- a/.github/workflows/update-test.yml
+++ b/.github/workflows/update-test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-20.04
     if: ${{ github.event.pull_request.head.repo.full_name == 'elan-ev/opencast-editor'
       || github.event.pull_request.head.repo.full_name == 'Arnei/opencast-editor'
-      || github.event.pull_request.head.repo.full_name == 'abc/opencast-editor' }}
+      || github.event.pull_request.head.repo.full_name == 'xy/opencast-editor' }}
     steps:
     - name: generate build path
       run: echo "::set-output name=build::${{github.event.number}}/$(date +%Y-%m-%d_%H-%M-%S)/" | sed 's_build::/*_build::_'
